--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -20,5 +20,4 @@ setw -g clock-mode-style 12
 
 # bind 'r' to reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
-run-shell "~/.local/src/nord-tmux/nord.tmux"
-#run-shell "~/.tmux/nord.tmux"
+run-shell "~/.tmux/nord-tmux/nord.tmux"
