move to dracula theme

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -20,4 +20,8 @@ setw -g clock-mode-style 12
 
 # bind 'r' to reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
-run-shell "~/.tmux/nord-tmux/nord.tmux"
+#run-shell "~/.tmux/nord-tmux/nord.tmux"
+
+set -g @dracula-plugins "time"
+set -g @dracula-show-powerline true
+run-shell "~/.tmux/dracula-tmux/dracula.tmux"
