--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,5 +1,4 @@
 set-option -g default-shell /usr/bin/zsh
-#set -g default-terminal "screen-256color"
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
@@ -20,8 +19,9 @@ setw -g clock-mode-style 12
 
 # bind 'r' to reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
-#run-shell "~/.tmux/nord-tmux/nord.tmux"
 
-set -g @dracula-plugins "time"
-set -g @dracula-show-powerline true
-run-shell "~/.tmux/dracula-tmux/dracula.tmux"
+# do plugin stuff
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin "arcticicestudio/nord-tmux"
+run '~/.tmux/plugins/tpm/tpm'
