--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -2,6 +2,8 @@ set-option -g default-shell /usr/bin/zsh
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+#set-option -g status-position top
+
 # make C-a the prefix
 unbind-key C-b
 set-option -g prefix C-a
@@ -24,4 +26,6 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin "arcticicestudio/nord-tmux"
+#set -g @plugin 'egel/tmux-gruvbox'
+#set -g @tmux-gruvbox 'dark'
 run '~/.tmux/plugins/tpm/tpm'
