--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -16,6 +16,9 @@ bind-key -r "C-Space" next-window
 # enable mouse
 setw -g mouse on
 
+# tweak escape time
+set -sg escape-time 10
+
 # set clock format
 setw -g clock-mode-style 12
 
