--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,5 +1,5 @@
 set-option -g default-shell /usr/bin/zsh
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 #set-option -g status-position top
